--- a/curated.html
+++ b/curated.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Início</title>
+    <title>Curated</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,9 +13,9 @@
     <link rel="icon" href="icon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-  </head>
-  <body>
-    <header class="header">
+</head>
+<body>
+  <header class="header">
       <a href="#" class="logo">Pexels-API</a>
       <nav class="navbar">
         <a href="index.html">Início</a>
@@ -25,7 +25,16 @@
       </nav>
     </header>
     <main>
-      
+      <div class="container-fluid" id="body">
+        <h1 class="text-center" id="titulo">Galeria</h1>
+        <p class="text-center" id="subtitulo">Essa página permite que você receba fotos em tempo real selecionadas pela equipe do Pexels.</p>
+        <div class="row">
+          <div class="column" id="col1"></div>
+          <div class="column" id="col2"></div>
+          <div class="column" id="col3"></div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="text-body-secundry py-5">
@@ -44,10 +53,10 @@
         </p>
       </div>
     </footer>
-    <script
+  <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-  </body>
+</body>
 </html>
