--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="icon/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="script.js"></script>
   </head>
   <body>
@@ -21,7 +21,6 @@
         <a href="index.html">Início</a>
         <a href="curated.html">Populares</a>
         <a href="index.html">Sobre</a>
-
       </nav>
     </header>
     <main>
