Finalizando pagina 'curated' e galeria

--- a/curated.html
+++ b/curated.html
@@ -20,12 +20,12 @@
       <a href="#" class="logo">Pexels-API</a>
       <nav class="navbar">
         <a href="index.html">Início</a>
-        <a href="curated.html">Populares</a>
+        <a href="curated.html">Escolhidas</a>
         <a href="index.html">Sobre</a>
       </nav>
     </header>
     <main>
-      <div class="container" id="gallery"></div>
+      <div class="container" id="galleryContainer"></div>
     </main>
 
     <footer class="text-body-secundry py-5">
