comecando a mudar a pagina principal

--- a/curated.html
+++ b/curated.html
@@ -28,12 +28,10 @@
       <div class="container" id="galleryContainer"></div>
     </main>
 
-    <footer class="text-body-secundry py-5">
+    <footer class="footer">
       <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Voltar ao topo</a>
-        </p>
-        <p class="mb-1">
+        <a href="#">Voltar ao topo</a>
+        <p class="linking">
           Photos provided by
           <a
             target="_blank"
