--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="icon/favicon.png" type="image/x-icon">
+    <link rel="icon" href="icon/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/index.css" />
+    <script src="index.js"></script>
   </head>
+
   <body>
     <header class="header">
       <a href="#" class="logo">Pexels-API</a>
@@ -23,16 +25,13 @@
         <a href="index.html">Sobre</a>
       </nav>
     </header>
-    <main>
-      
-    </main>
+    
+    <main></main>
 
-    <footer class="text-body-secundry py-5">
+    <footer class="footer">
       <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Voltar ao topo</a>
-        </p>
-        <p class="mb-1">
+        <a href="#">Voltar ao topo</a>
+        <p class="linking">
           Photos provided by
           <a
             target="_blank"
